syntax="proto3";


package greet;

option go_package="/greetpb";

message Greeting {
     string first_name = 1;
     string last_name = 2;
}

message GreetReqeust {
     Greeting greeting = 1;
}

message GreetResponse {
     string result = 1;
}


message GreetManyTimesRequest {
     Greeting greeting = 1;
}


message GreetManyTimesResponse {
     string result = 1;
}

message LongGreetRequest {
     string name = 1;
}

message LongGreetResponse {
     string result = 1;
}


message GreetEveryoneRequest {
     string name = 1;
}

message GreetEveryoneResponse {
     string message = 1;
}

service GreetService{
     // unary API
     rpc Greet(GreetReqeust) returns (GreetResponse) {};

     // server streaming API
     rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

     // client streaming
     rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

     // bi-directinal streaming
     rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}